@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-03-29T16:06:19Z",
-  "count_outdated" : 193,
-  "uniques_outdated" : 41,
+  "timestamp" : "2022-03-30T16:08:19Z",
+  "count_outdated" : 230,
+  "uniques_outdated" : 43,
   "count" : 268,
   "uniques" : 50,
   "views" : [
-    {
-      "timestamp": "2022-03-16T00:00:00Z",
-      "count": 37,
-      "count_minmax": [ 0, 37 ],
-      "uniques": 2,
-      "uniques_minmax": [ 0, 2 ]
-    },
     {
       "timestamp": "2022-03-18T00:00:00Z",
       "count": 1,
