@@ -1,12 +1,7 @@
 {
-  "count": 75,
-  "uniques": 8,
+  "count": 38,
+  "uniques": 6,
   "views": [
-    {
-      "timestamp": "2022-03-16T00:00:00Z",
-      "count": 37,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-03-18T00:00:00Z",
       "count": 1,
